--- a/.gitmodules
+++ b/.gitmodules
@@ -1,28 +1,28 @@
 [submodule "images"]
 	path = images
-    url = https://github.com/Pagiatis-Spiros/pibook-testing/images.git
+    url = https://github.com/Pagiatis-Spiros/images-pibook.git
     branch = master
 [submodule "_gallery"]
 	path = _gallery
-	url = https://github.com/Pagiatis-Spiros/pibook-testing/_gallery.git
+	url = https://github.com/Pagiatis-Spiros/_gallery-pibook.git
 	branch = master
 [submodule "_includes/extras"]
 	path = _includes/extras
-	url = https://github.com/Pagiatis-Spiros/pibook-testing/extras.git
+	url = https://github.com/pibook/extras.git
 	branch = master
 [submodule "_quotes"]
 	path = _quotes
-	url = https://github.com/Pagiatis-Spiros/pibook-testing/_quotes.git
+	url = https://github.com/pibook/_quotes.git
 	branch = master
 [submodule "_notes"]
 	path = _notes
-	url = https://github.com/Pagiatis-Spiros/pibook-testing/notes.git
+	url = https://github.com/pibook/notes.git
 	branch = master
 [submodule "_bibliography"]
 	path = _bibliography
-	url = https://github.com/Pagiatis-Spiros/pibook-testing/bibliography.git
+	url = https://github.com/pibook/bibliography.git
 	branch = master
 [submodule "_includes/text"]
 	path = _includes/text
-	url = https://github.com/Pagiatis-Spiros/pibook-testing/text.git
+	url = https://github.com/pibook/text.git
 	branch = main 
